--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
  <meta charset="UTF-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
- <link rel="stylesheet" href="./style.css" type="text/css">
+ <link rel="stylesheet" href="./stylesheet.css" type="text/css">
  <title>Parker Justice</title>
 </head>
 <body>
@@ -36,5 +36,39 @@
         </div>
     </header>
 
+    <!--hero section-->
+
+<section id="content">
+    <div class="hero"></div>
+    <div class="content">
+        <div id="about-me" class="about-me">
+            <img src="./photos/portfolio-profile.JPG" class="float-right" />
+            <h2>About Me</h2>
+            <p>My Name is Parker Justice I am a recent graduate of East Carolina University with a degree in communications.
+                I am from the Outer Banks of North Carolina, living in Greenville, NC.
+                I am currently working for MrBeast Youtube, LLC as a PA.
+            </p>
+        </div>
+        <div id="work" class="work">
+            <div class="container">
+            <a href="https://parkerjustice.github.io/Horiseon2.0/">
+                <img alt="Horiseon2 website image" src="./photos/search-engine-optimization.jpg" class="float-left" />
+                <div class="text-block">
+                    <h4>Horiseon</h4>
+                    <p>First formal website</p>
+                </div>
+            </a>
+            </div>
+            <div class="container">
+            <a href="https://lernantino.github.io/run-buddy/">
+                <img alt="Run-Buddy running foot" src="./photos/step-3.svg" class="float-left" />
+                <div class="text-block">
+                    <h4>Run-Buddy</h4>
+                </div>
+            </a>  
+            </div>
+        </div>
+    </div>
     
+</section>
 </body>
