added footer and contact

--- a/index.html
+++ b/index.html
@@ -19,16 +19,13 @@
                 <nav>
                 <ul>
                  <li>
-                     <a href="">About Me</a>
+                     <a href="#about-me">About Me</a>
                  </li>
                  <li>
-                     <a href="">Work</a>
+                     <a href="#work">Work</a>
                  </li>
                  <li>
-                     <a href="">Contact Me</a>
-                 </li>
-                 <li>
-                     <a href="">Resume</a>
+                     <a href="#contact">Contact Me</a>
                  </li>
                 </ul>
                 </nav>
@@ -69,6 +66,45 @@
             </div>
         </div>
     </div>
-    
+
+    <!--end hero section-->
+
+    <!--Contact Section-->
+
+    <div id="contact" class="contact">
+        <div class="contact-me">
+        <h3>Contact Me</h3>
+        <div>
+            <nav>
+            <ul>
+             <li>
+                 <a href="mail to:parkerjpiano@gmail.com">Email</a>
+             </li>
+             <li>
+                 <a href="tel:555-555-5555">Call Me At 555-555-5555</a>
+             </li>
+             <li>
+                 <a href="https://github.com/parkerjustice">Git Hub</a>
+             </li>
+             <li>
+                 <a href="./ParkerDJustice.pdf">Resume</a>
+             </li>
+            </ul>
+            </nav>
+        </div>
+    </div>
+
+    <!--Footer-->
+
+    <div class="footer">
+        <h2>Created by Parker Justice</h2>
+        <p>
+            &copy; 2021 portfolio-profile
+        </p>
+    </div>
 </section>
 </body>
+
+<!--End Footer-->
+
+</html>
