added initial css

--- a/index.html
+++ b/index.html
@@ -8,25 +8,26 @@
  <link rel="stylesheet" href="./stylesheet.css" type="text/css">
  <title>Parker Justice</title>
 </head>
+<style>a {text-decoration: none;} </style>
 <body>
     <!--navigation-->
     <header>
         <div class="header">
             <h1>
-                <a href="/">"Parker Justice Portfolio"</a>
+                <a href="/">Parker Justice Portfolio</a>
             </h1>
             <div>
                 <nav>
                 <ul>
                  <li>
-                     <a href="#about-me">About Me</a>
+                    <a href="#about-me">About Me</a>
                  </li>
                  <li>
                      <a href="#work">Work</a>
                  </li>
                  <li>
-                     <a href="#contact">Contact Me</a>
-                 </li>
+                    <a href="#contact">Contact Me</a>
+                </li>
                 </ul>
                 </nav>
             </div>
@@ -39,7 +40,6 @@
     <div class="hero"></div>
     <div class="content">
         <div id="about-me" class="about-me">
-            <img src="./photos/portfolio-profile.JPG" class="float-right" />
             <h2>About Me</h2>
             <p>My Name is Parker Justice I am a recent graduate of East Carolina University with a degree in communications.
                 I am from the Outer Banks of North Carolina, living in Greenville, NC.
@@ -47,24 +47,30 @@
             </p>
         </div>
         <div id="work" class="work">
-            <div class="container">
+            <h2>Work</h2>
+        </div>
+
+    <div id="Horiseon" class="Horiseon">
+        <div class="container">
             <a href="https://parkerjustice.github.io/Horiseon2.0/">
-                <img alt="Horiseon2 website image" src="./photos/search-engine-optimization.jpg" class="float-left" />
+                <img alt="Horiseon2 website image" src="./photos/search-engine-optimization.jpg" class="center" />
                 <div class="text-block">
                     <h4>Horiseon</h4>
                     <p>First formal website</p>
                 </div>
             </a>
-            </div>
-            <div class="container">
-            <a href="https://lernantino.github.io/run-buddy/">
-                <img alt="Run-Buddy running foot" src="./photos/step-3.svg" class="float-left" />
+         </div>
+        </div>
+    <div id="Run-Buddy" class="Run-Buddy">
+        <div class="container">
+           <a href="https://lernantino.github.io/run-buddy/">
+                <img alt="Run-Buddy running foot" src="./photos/step-3.svg" class="center" />
                 <div class="text-block">
                     <h4>Run-Buddy</h4>
                 </div>
             </a>  
-            </div>
         </div>
+    </div>
     </div>
 
     <!--end hero section-->
@@ -78,7 +84,7 @@
             <nav>
             <ul>
              <li>
-                 <a href="mail to:parkerjpiano@gmail.com">Email</a>
+                <a href = "mailto: parkerjpiano@gmail.com">Send Email</a>
              </li>
              <li>
                  <a href="tel:555-555-5555">Call Me At 555-555-5555</a>
