added another project

--- a/index.html
+++ b/index.html
@@ -50,6 +50,19 @@
             <h2>Work</h2>
         </div>
 
+        <div id="Horiseon" class="Horiseon">
+            <div class="container">
+                <a href="https://guarded-reaches-67644.herokuapp.com/">
+                    <img alt="Horiseon2 website image" src="./photos/Screen Shot 2022-01-29 at 7.02.12 PM.png" class="center" />
+                    <div class="text-block">
+                        <h4>CarBnb</h4>
+                        <p>Group Project</p>
+                    </div>
+                </a>
+             </div>
+            </div>
+          
+
     <div id="Horiseon" class="Horiseon">
         <div class="container">
             <a href="https://parkerjustice.github.io/Horiseon2.0/">
