--- a/index.html
+++ b/index.html
@@ -84,6 +84,16 @@
             </a>  
         </div>
     </div>
+    <div id="Run-Buddy" class="Run-Buddy">
+        <div class="container">
+           <a href="https://github.com/parkerjustice/art-club">
+                <img alt="Run-Buddy running foot" src="./photos/ArtClub.png" class="center" />
+                <div class="text-block">
+                    <h4>Art Club</h4>
+                </div>
+            </a>  
+        </div>
+    </div>
     </div>
 
     <!--end hero section-->
